--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -18,7 +18,7 @@
     </tbody>
   </table>
 
-  <form>
+  <form class="container">
     <div class="row">
       <input class="form-control col" [(ngModel)]="newTodo.task" type="text" name="task">
       <button class="btn btn-primary col-auto" (click)="addTodo(newTodo)">Add Todo</button>
