--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
+<app-navigation></app-navigation>
 
 <div class="container">
 
-  <app-todo-list></app-todo-list>
+  <!-- <app-todo-list></app-todo-list> -->
+
+  <router-outlet></router-outlet>
 
 </div>
