--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,6 +1,10 @@
-<h1>{{title}} <span class="badge bg-success">{{getTodoCount()}}</span> </h1>
+<h1>{{title}} <span class="badge" [ngClass]="getTodoCount()>=10?'bg-danger':getTodoCount()>=5?'bg-warning':'bg-success'">{{getTodoCount()}}</span> </h1>
 
 <div *ngIf="! selected">
+  <div class="form-check">
+    <label class="form-check-label" for="showComplete">Show completed tasks</label>
+    <input class="form-check-input" type="checkbox" name="showComplete" [(ngModel)]="showComplete">
+  </div>
   <table class="table table-striped table-hover">
     <thead class="table-dark">
       <tr>
@@ -11,9 +15,9 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let todo of todos">
+      <tr *ngFor="let todo of todos | incomplete: showComplete" [ngClass]="todo.completed?'completed':''">
         <td (click)="displayTodo(todo)">{{todo.task}}</td>
-        <td> <input [(ngModel)]="todo.completed" type="checkbox" name="completed">  </td>
+        <td> <input (change)="updateTodo(todo, false)" [(ngModel)]="todo.completed" type="checkbox" name="completed">  </td>
         <td>{{todo.completed}}</td>
         <td><button (click)="deleteTodo(todo.id)" class="btn btn-danger">X</button></td>
       </tr>
@@ -34,6 +38,7 @@
   Description:
   <blockquote>{{selected.description}}</blockquote>
   <p>Completed: {{selected.completed}}</p>
+  <p>Complete Date: {{selected.completeDate}}</p>
   <button class="btn btn-outline-danger" (click)="displayTable()">Back</button>
   <button class="btn btn-outline-primary" (click)="setEditTodo()">Edit</button>
 </div>
